home page finished

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
       <nav class="nav-bar">
         <div class="nav-one">
           <span class="link"><a href="#">Welcome</a></span>
-          <span class="link"><a href="#">Contact Us</a></span>
-          <span class="link"><a href="#">About Us</a></span>
-          <span class="link"><a href="#">Request for Quote</a></span>
           <span class="link"><a href="#">Residential</a></span>
           <span class="link"><a href="#">Commercial</a></span>
-          <span class="link"><a href="#">Induestrial</a></span>
+          <span class="link"><a href="#">Industrial</a></span>
+          <span class="link"><a href="#">Request for Quote</a></span>
+          <span class="link"><a href="#">Contact Us</a></span>
         </div>
         <div class="nav-two">
           <span class="link home"><a href="#">Are you buying a home?</a></span>
@@ -24,14 +23,39 @@
       </nav>
     </header>
 
-
-
     <main>
-      <div class="co-title">
+      <section class="co-title">
         <div class="banner">
           <h3>Welcome to</h3>
           <h1>Electric Ideas Inc.</h1>
+      </section>
+      <section class="main-info">
+        <div>
+          <p class="main-text">My name is Jay McIntosh and I am the owner of Electric Ideas.</p>
+          <br>
+          <p class="main-text">I have had my electrical license since July, 2000 after serving my apprenticeship with
+            the The State Group in London. For 5 years I worked at Electromotive Canada as a
+            Maintenance Electrician. When EMC closed I decided to start my own business and I
+            have been doing this since the spring of 2012.</p>
+          <br>
+          <p class="main-text">I try to be honest, dependable and forthcoming.</p>
+          <br>
+          <p class="main-text">Please contact us when you are in need of our services. </p>
         </div>
+      </section>
+
+      <section class="main-images">
+        <div class="BBB">
+          <img src="./resources/images/bbb.jpg" alt="Better Business Bureau Logo">
+        </div>
+        <div class="esa">
+          <img src="./resources/images/escra_logo.png" alt="Better Business Bureau Logo">
+          <span>To vist the ESA site <a class="esa-link" href="http://esasafe.ca/" target="_blank">Click here</a></span>
+        </div>
+        <div class="tel-pole">
+          <img src="./resources/images/telephonepole.jpg" alt="Electic telphone pole">
+        </div>
+      </section>
       <div>
 
     </main>
