fixed some capitalization

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
 
       <section class="main-images">
-        <div class="BBB">
+        <div class="bbb">
           <img src="./resources/images/bbb.jpg" alt="Better Business Bureau Logo">
         </div>
         <div class="esa">
