--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <section class="main-images">
         <div class="bbb">
-          <img src="./resources/images/bbb.jpg" alt="Better Business Bureau Logo">
+          <img src="./resources/images/BBB.jpg" alt="Better Business Bureau Logo">
         </div>
         <div class="esa">
           <img src="./resources/images/escra_logo.png" alt="Better Business Bureau Logo">
